--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -139,6 +139,8 @@
 \todo{more debug views, debug data visualizations}
 \todo{daniel's pipeline visualizations, see emails}
 \todo{4k tests}
+\todo[color=yellow]{fixed blue noise pattern when sampling RSM?}
+\todo{no additional space after et al.}
 
 % \include{chap-examples}
 % \include{chap-moreexamples}
